--- a/.github/workflows/quarto-gh-pages.yml
+++ b/.github/workflows/quarto-gh-pages.yml
@@ -20,6 +20,16 @@ jobs:
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+
+      - name: Install R packages
+        run: |
+          Rscript -e 'install.packages(c("knitr","rmarkdown","htmltools"))'
+
+
       - name: Render oow_file_naming.qmd to HTML
         run: |
           quarto render oow_file_naming.qmd --to html --output index.html
